# py-ora2pg

./: .gitignore  README  README.md  gen_pg_tabs.py  gen_sirena_pg.sh  ora2pg.py  pg2ora.py  pyproject.toml  requirements.txt  setup.cfg
src/ora2pg/: ora2pg.py  pg2ora.py
src/py_ora2pg.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
src/py_ora2pg_romankovalev.egg-info/: PKG-INFO  SOURCES.txt
