[metadata]
name = py-ora2pg-romankovalev
version = 1.0.1
author = Roman Kovalev
author_email = romkoval@gmail.com
description = Oracle to postgresql migration tool
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/romkoval/py-ora2pg
project_urls =
    Bug Tracker = https://github.com/romkoval/py-ora2pg/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
