[metadata]
name = ora2pg
version = 1.0.6
author = Roman Kovalev
author_email = romkoval@gmail.com
description = Oracle to postgresql migration tool
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/romkoval/py-ora2pg
project_urls =
    Bug Tracker = https://github.com/romkoval/py-ora2pg/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires = 
	cx-Oracle==7.0.0
	py-postgresql==1.2.1
	tqdm==4.28.1

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
        ora2pg = ora2pg:ora2pg.main
        pg2ora = ora2pg:pg2ora.main
        gen_pg_tabs = ora2pg:gen_pg_tabs.main
